<resources>

    <string name="app_name">Relay Service</string>
    <string name="menu_settings">Settings</string>
    <string name="myendpoint">My Endpoint:</string>
    <string name="create_endpoint_button_title">Create Endpoint</string>
    <string name="group_listview_info">Groups joined by my endpoint</string>
    <string name="manage_groups_button_title">Manage Groups</string>
    <string name="send_messages_button_title">Send Messages</string>
    <string name="receive_messages_button_title">Receive Messages</string>
    <string name="available_groups_info">Available Groups</string>
    <string name="joined_groups_info">Groups joined by this Endpoint</string>
    <string name="total_messages_info">Total Messages</string>
    <string name="title_activity_main">RelayMain</string>
    <string name="title_activity_receive_message">Receive Messages</string>
    <string name="title_activity_group_manage">Group Management</string>
    <string name="title_activity_send_message">Send Messages</string>

</resources>