<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myendpoint"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/group_textview_myendpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_groups_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ListView
        android:id="@+id/group_listview_availableGroupList"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:choiceMode="singleChoice" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/group_button_createGroup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create" />
        <Button
            android:id="@+id/group_button_deleteGroup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />
        <Button
            android:id="@+id/group_button_joinGroup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Join" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joined_groups_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/group_listview_joinedGroupList"
        android:layout_width="match_parent"
        android:layout_height="100dp" 
        android:choiceMode="singleChoice" />
    
    <Button
        android:id="@+id/group_button_leaveGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Leave" />

    <Button
        android:id="@+id/group_button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back" />
    
    <ProgressBar 
        android:id="@+id/group_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>